k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orca-service
  labels:
    app: orca
spec:
  selector:
    app: orca
    component: app
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
    - name: websocket
      port: 3001
      targetPort: 3001
      protocol: TCP
  type: ClusterIP
